<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcart"
    tools:context=".activity.CartActivity">

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/empty_cart"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_cart"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:visibility="gone" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="LineScalePulseOutIndicator" />

    <ImageView
        android:id="@+id/empty_cart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@drawable/empty_cart"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cartRecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:divider="@android:color/transparent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/empty_text"
        android:layout_toEndOf="@+id/empty_text"
        android:layout_above="@+id/relative">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:text="@string/payable"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/total"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:text="₹ 0"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/continuee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total"
            android:layout_marginTop="10dp"
            android:background="@drawable/pickup_button"
            android:elevation="20dp"
            android:text="@string/continuee"
            android:textColor="@color/white" />


    </RelativeLayout>

</RelativeLayout>
