<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pickup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcart"
    android:orientation="vertical"
    tools:context="freakydevelopers.dhobikart.activity.PickupActivity">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/confirmaddress"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/confirmaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textaddress"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/whitecurve"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="5dp">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Siddharth Chandra"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/address1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="Address is defined as Sharat Pally Burdwan"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/landmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address1"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="Landmark"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/landmark"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/alterPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textordersummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmaddress"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/ordersummary"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/ordersummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/whitecurve"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="5dp"
                android:layout_below="@+id/textordersummary"
                android:layout_alignLeft="@+id/secondlastlayout"
                android:layout_alignStart="@+id/secondlastlayout">

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/avi"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:visibility="invisible"
                    app:indicatorColor="@color/colorPrimary"
                    app:indicatorName="LineScalePulseOutIndicator" />

                <TextView
                    android:id="@+id/noofitems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/noofitems"
                    android:text="ITEM/S"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/firstdivider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/noofitems"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/gray" />


             <!--   <TextView
                    android:id="@+id/ordertotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/firstdivider"
                    android:layout_marginBottom="2dp"
                    android:text="Order Total"
                    android:textColor="@color/grey_ivory5"
                    android:textSize="15sp" />-->

            <!--    <TextView
                    android:id="@+id/rupee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/firstdivider"
                    android:layout_marginBottom="2dp"
                    android:layout_toLeftOf="@+id/total"
                    android:text="₹ "
                    android:textColor="@color/grey_ivory5"
                    android:textSize="15sp" />-->


              <!--  <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/firstdivider"
                    android:layout_marginBottom="2dp"
                    android:text="0"
                    android:textColor="@color/grey_ivory5"
                    android:textSize="15sp" />
-->

             <!--   <TextView
                    android:id="@+id/dhmoneytext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ordertotal"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/grey_ivory5"
                    android:textSize="15sp"
                    android:visibility="visible" />-->


               <!-- <TextView
                    android:id="@+id/dhmoneyrupee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ordertotal"
                    android:layout_marginBottom="2dp"
                    android:layout_toLeftOf="@+id/dhmoneytotal"
                    android:text="- "
                    android:textColor="@color/grey_ivory5"
                    android:textSize="15sp"
                    android:visibility="visible" />-->


               <!-- <TextView
                    android:id="@+id/dhmoneytotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/ordertotal"
                    android:layout_marginBottom="2dp"
                    android:text="0"
                    android:textColor="@color/grey_ivory5"
                    android:textSize="15sp"
                    android:visibility="visible" />-->


                <TextView
                    android:id="@+id/delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/firstdivider"
                    android:layout_marginBottom="2dp"
                    android:text="Delivery"
                    android:textColor="@color/grey_ivory5"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/firstdivider"
                    android:layout_marginBottom="2dp"
                    android:text="FREE"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/secondivider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/delivery"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/payable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/secondivider"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="5dp"
                    android:text="Total Payable"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/rupees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/secondivider"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@+id/totalpayable"
                    android:text="₹ "
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/totalpayable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/secondivider"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="5dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/textpayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ordersummary"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/payment"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/secondlastlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textpayment"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/whitecurve"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/note"
                    android:textColor="@color/grey_ivory5"
                    android:textSize="15sp" />
<!--
                <TextView
                    android:id="@+id/dcpointtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/note"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="DC Points"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:visibility="gone" />-->

             ?

                <CheckBox
                    android:id="@+id/dcpointselect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/note"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="1dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingTop="1dp"
                    android:text="SELECT"
                    android:textColor="@color/mint"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/cod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dcpointselect"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:text="CASH ON DELIVERY"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/codselect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/dcpointselect"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="1dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingTop="1dp"
                    android:text="SELECT"
                    android:textColor="@color/mint"
                    android:textSize="15sp" />
            </RelativeLayout>



        </RelativeLayout>
    </ScrollView>


    <Button
        android:id="@+id/placeorder"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/pickup_button"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="PLACE ORDER"
        android:textColor="@color/white" />


</LinearLayout>
